add config optimizations

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,3 +4,11 @@ roles_path = ./roles:/etc/ansible/roles
 inventory = inventory
 become = true
 result_format = yaml
+gathering = smart
+fact_caching = jsonfile
+fact_caching_connection = /tmp/ansible_fact_cache
+fact_caching_timeout = 86400
+
+[ssh_connection]
+pipelining = True
+ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o ForwardAgent=yes
