--- a/roles/ohmyzsh/tasks/main.yml
+++ b/roles/ohmyzsh/tasks/main.yml
@@ -12,13 +12,13 @@
 
 - name: Check if Oh-My-Zsh is already installed
   stat:
-    path: "{{ ansible_facts["env"]["HOME"] }}/.oh-my-zsh"
+    path: "{{ ansible_facts['env']['HOME'] }}/.oh-my-zsh"
   register: ohmyzsh_installed
 
 - name: Clone Oh-My-Zsh framework
   git:
     repo: https://github.com/robbyrussell/oh-my-zsh.git
-    dest: "{{ ansible_facts["env"]["HOME"] }}/.oh-my-zsh"
+    dest: "{{ ansible_facts['env']['HOME'] }}/.oh-my-zsh"
     accept_hostkey: yes
     depth: 1
   when: not ohmyzsh_installed.stat.exists
