--- a/roles/asdf/tasks/configure-shell.yml
+++ b/roles/asdf/tasks/configure-shell.yml
@@ -7,12 +7,12 @@
 
 - name: Check if .zshrc exists
   stat:
-    path: "{{ ansible_facts["env"]["HOME"] }}/.zshrc"
+    path: "{{ ansible_facts['env']['HOME'] }}/.zshrc"
   register: zshrc_stat
 
 - name: Add asdf to ohmyzsh plugins
   lineinfile:
-    path: "{{ ansible_facts["env"]["HOME"] }}/.zshrc"
+    path: "{{ ansible_facts['env']['HOME'] }}/.zshrc"
     regexp: '^plugins=\((.*)\)$'
     line: 'plugins=(\1 asdf)'
     backrefs: yes
@@ -23,7 +23,7 @@
 
 # Alternative approach if the regex doesn't find plugins line
 - name: Check if asdf plugin already in .zshrc
-  shell: grep -q "plugins=(.*asdf.*)" {{ ansible_facts["env"]["HOME"] }}/.zshrc
+  shell: grep -q "plugins=(.*asdf.*)" {{ ansible_facts['env']['HOME'] }}/.zshrc
   register: asdf_in_zsh
   failed_when: false
   changed_when: false
@@ -31,7 +31,7 @@
 
 - name: Manually add asdf to plugins if needed
   replace:
-    path: "{{ ansible_facts["env"]["HOME"] }}/.zshrc"
+    path: "{{ ansible_facts['env']['HOME'] }}/.zshrc"
     regexp: '^(plugins=\([^)]*)\)$'
     replace: '\1 asdf)'
   when:
@@ -44,7 +44,7 @@
 
 - name: Check if .bashrc exists
   stat:
-    path: "{{ ansible_facts["env"]["HOME"] }}/.bashrc"
+    path: "{{ ansible_facts['env']['HOME'] }}/.bashrc"
   register: bashrc_stat
 
 - name: Detect asdf installation path (macOS)
@@ -75,7 +75,7 @@
 
 - name: Add asdf initialization to .bashrc
   lineinfile:
-    path: "{{ ansible_facts["env"]["HOME"] }}/.bashrc"
+    path: "{{ ansible_facts['env']['HOME'] }}/.bashrc"
     state: present
     create: yes
     regexp: '^\. .*/asdf\.sh$'
