--- a/roles/dotfiles/tasks/main.yml
+++ b/roles/dotfiles/tasks/main.yml
@@ -16,13 +16,13 @@
 
 - name: Check if dotfiles directory exists
   stat:
-    path: "{{ ansible_facts["env"]["HOME"] }}/dotfiles"
+    path: "{{ ansible_facts['env']['HOME'] }}/dotfiles"
   register: dotfiles_dir
 
 - name: Check for local modifications in dotfiles
   command: git status --porcelain
   args:
-    chdir: "{{ ansible_facts["env"]["HOME"] }}/dotfiles"
+    chdir: "{{ ansible_facts['env']['HOME'] }}/dotfiles"
   register: dotfiles_local_changes
   changed_when: false
   failed_when: false
@@ -31,7 +31,7 @@
 - name: Stash local changes if any exist
   command: git stash save "Ansible auto-stash before update"
   args:
-    chdir: "{{ ansible_facts["env"]["HOME"] }}/dotfiles"
+    chdir: "{{ ansible_facts['env']['HOME'] }}/dotfiles"
   when:
     - dotfiles_dir.stat.exists
     - dotfiles_local_changes.stdout | length > 0
@@ -40,14 +40,14 @@
 - name: Clone or update dotfiles repository
   git:
     repo: git@github.com:afromankenobi/dotfiles.git
-    dest: "{{ ansible_facts["env"]["HOME"] }}/dotfiles"
+    dest: "{{ ansible_facts['env']['HOME'] }}/dotfiles"
     accept_hostkey: true
     update: yes
 
 - name: Pop stashed changes
   command: git stash pop
   args:
-    chdir: "{{ ansible_facts["env"]["HOME"] }}/dotfiles"
+    chdir: "{{ ansible_facts['env']['HOME'] }}/dotfiles"
   when:
     - stash_result is defined
     - stash_result.changed
@@ -67,8 +67,8 @@
 
 - name: Symlink Vim configuration
   file:
-    src: "{{ ansible_facts["env"]["HOME"] }}/dotfiles/vim/{{ item }}"
-    dest: "{{ ansible_facts["env"]["HOME"] }}/.{{ item }}"
+    src: "{{ ansible_facts['env']['HOME'] }}/dotfiles/vim/{{ item }}"
+    dest: "{{ ansible_facts['env']['HOME'] }}/.{{ item }}"
     state: link
     force: yes
   with_items:
@@ -77,27 +77,27 @@
 
 - name: Symlink Tmux configuration
   file:
-    src: "{{ ansible_facts["env"]["HOME"] }}/dotfiles/tmux/tmux.conf"
-    dest: "{{ ansible_facts["env"]["HOME"] }}/.tmux.conf"
+    src: "{{ ansible_facts['env']['HOME'] }}/dotfiles/tmux/tmux.conf"
+    dest: "{{ ansible_facts['env']['HOME'] }}/.tmux.conf"
     state: link
     force: yes
 
 - name: Symlink Zsh configuration
   file:
-    src: "{{ ansible_facts["env"]["HOME"] }}/dotfiles/zsh/zshrc"
-    dest: "{{ ansible_facts["env"]["HOME"] }}/.zshrc"
+    src: "{{ ansible_facts['env']['HOME'] }}/dotfiles/zsh/zshrc"
+    dest: "{{ ansible_facts['env']['HOME'] }}/.zshrc"
     state: link
     force: yes
 
 - name: Check if zshrc.local exists
   stat:
-    path: "{{ ansible_facts["env"]["HOME"] }}/.zshrc.local"
+    path: "{{ ansible_facts['env']['HOME'] }}/.zshrc.local"
   register: zshrc_example
 
 - name: Create zshrc.local from example if it doesn't exist
   copy:
-    src: "{{ ansible_facts["env"]["HOME"] }}/dotfiles/zsh/zshrc.local.example"
-    dest: "{{ ansible_facts["env"]["HOME"] }}/.zshrc.local"
+    src: "{{ ansible_facts['env']['HOME'] }}/dotfiles/zsh/zshrc.local.example"
+    dest: "{{ ansible_facts['env']['HOME'] }}/.zshrc.local"
     force: no
   when: not zshrc_example.stat.exists
 
@@ -109,28 +109,28 @@
   block:
     - name: Check if Doom Emacs is already installed
       stat:
-        path: "{{ ansible_facts["env"]["HOME"] }}/.config/emacs/bin/doom"
+        path: "{{ ansible_facts['env']['HOME'] }}/.config/emacs/bin/doom"
       register: doom_installed
 
     - name: Clone Doom Emacs
       git:
         repo: https://github.com/doomemacs/doomemacs
-        dest: "{{ ansible_facts["env"]["HOME"] }}/.config/emacs"
+        dest: "{{ ansible_facts['env']['HOME'] }}/.config/emacs"
         depth: 1
       when: not doom_installed.stat.exists
 
     - name: Install Doom Emacs
-      command: "{{ ansible_facts["env"]["HOME"] }}/.config/emacs/bin/doom install"
+      command: "{{ ansible_facts['env']['HOME'] }}/.config/emacs/bin/doom install"
       when: not doom_installed.stat.exists
 
     - name: Create Doom config directory
       file:
-        path: "{{ ansible_facts["env"]["HOME"] }}/.config/doom"
+        path: "{{ ansible_facts['env']['HOME'] }}/.config/doom"
         state: directory
 
     - name: Remove default Doom config files if they exist (only on first install)
       file:
-        path: "{{ ansible_facts["env"]["HOME"] }}/.config/doom/{{ item }}"
+        path: "{{ ansible_facts['env']['HOME'] }}/.config/doom/{{ item }}"
         state: absent
       with_items:
         - config.el
@@ -139,8 +139,8 @@
 
     - name: Symlink Doom Emacs configuration
       file:
-        src: "{{ ansible_facts["env"]["HOME"] }}/dotfiles/doom/{{ item }}"
-        dest: "{{ ansible_facts["env"]["HOME"] }}/.config/doom/{{ item }}"
+        src: "{{ ansible_facts['env']['HOME'] }}/dotfiles/doom/{{ item }}"
+        dest: "{{ ansible_facts['env']['HOME'] }}/.config/doom/{{ item }}"
         state: link
         force: yes
       with_items:
@@ -149,7 +149,7 @@
         - init.el
 
     - name: Run doom sync to generate config from org files
-      command: "{{ ansible_facts["env"]["HOME"] }}/.config/emacs/bin/doom sync"
+      command: "{{ ansible_facts['env']['HOME'] }}/.config/emacs/bin/doom sync"
       register: doom_sync_result
       changed_when: "'Synchronizing' in doom_sync_result.stdout"
   when: ansible_facts["os_family"] == "Darwin"
@@ -162,19 +162,19 @@
   block:
     - name: Check if nvimrc.lua exists in dotfiles
       stat:
-        path: "{{ ansible_facts["env"]["HOME"] }}/dotfiles/vim/nvimrc.lua"
+        path: "{{ ansible_facts['env']['HOME'] }}/dotfiles/vim/nvimrc.lua"
       register: nvimrc_exists
 
     - name: Create Neovim config directory
       file:
-        path: "{{ ansible_facts["env"]["HOME"] }}/.config/nvim"
+        path: "{{ ansible_facts['env']['HOME'] }}/.config/nvim"
         state: directory
       when: nvimrc_exists.stat.exists
 
     - name: Symlink Neovim configuration
       file:
-        src: "{{ ansible_facts["env"]["HOME"] }}/dotfiles/vim/nvimrc.lua"
-        dest: "{{ ansible_facts["env"]["HOME"] }}/.config/nvim/init.lua"
+        src: "{{ ansible_facts['env']['HOME'] }}/dotfiles/vim/nvimrc.lua"
+        dest: "{{ ansible_facts['env']['HOME'] }}/.config/nvim/init.lua"
         state: link
         force: yes
       when: nvimrc_exists.stat.exists
@@ -185,15 +185,15 @@
 
 - name: Symlink asdf .tool-versions file
   file:
-    src: "{{ ansible_facts["env"]["HOME"] }}/dotfiles/asdf/tool-versions"
-    dest: "{{ ansible_facts["env"]["HOME"] }}/.tool-versions"
+    src: "{{ ansible_facts['env']['HOME'] }}/dotfiles/asdf/tool-versions"
+    dest: "{{ ansible_facts['env']['HOME'] }}/.tool-versions"
     state: link
     force: yes
 
 - name: Symlink asdf default package configurations
   file:
-    src: "{{ ansible_facts["env"]["HOME"] }}/dotfiles/asdf/{{ item }}"
-    dest: "{{ ansible_facts["env"]["HOME"] }}/.{{ item }}"
+    src: "{{ ansible_facts['env']['HOME'] }}/dotfiles/asdf/{{ item }}"
+    dest: "{{ ansible_facts['env']['HOME'] }}/.{{ item }}"
     state: link
     force: yes
   with_items:
